modificación newmembers.html, se define grupos y privilegios de AD

--- a/NewMembers/members/templates/newmembers.html
+++ b/NewMembers/members/templates/newmembers.html
@@ -77,15 +77,21 @@
         <label for="privi_AD">Privilegios | AD: </label>
         <select name="privi_AD" id="privi_AD">
             <option value=" "> </option>
-            <option value="por definir">por definir</option>
-            <option value="por definir">por definir</option>
+            <option value="admin-grup">Administrador de Grupo</option>
+            <option value="admin-it">Administrador IT</option>
+            <option value="oper-grup">Operador de grupo | Estación</option>
         </select>
 
         <label for="grupo_AD">Grupo | AD:</label>
         <select name="grupo_AD" id="grupo_AD">
             <option value=" "> </option>
-            <option value="por definir">por definir</option>
-            <option value="por definir">por definir</option>
+            <option value="cordinacion">COORDINACION</option>
+            <option value="judiciales">JUDICIALES</option>
+            <option value="UIAT">UIAT</option>
+            <option value="UATO">UATO</option>
+            <option value="LAFD">LAFD</option>
+            <option value="UPDC">UPDC</option>
+            <option value="ADMIN-IT">ADMINISTRACION IT</option>
         </select>
 
         <label for="unidad">Unidad a la que pertenece: </label>
@@ -103,7 +109,7 @@
             <option value=" "> </option>
             <option value="administrador">ADMINISTRADOR</option>
             <option value="supervisor">SUPERVISOR</option>
-            <option value="desarrollador">DESARROLLADOR</option>
+            <option value="desarrollador">DESARROLLADOR (INVESTIGADOR)</option>
             <option value="espectador">ESPECTADOR</option>
         </select>
 
