--- a/NewMembers/members/templates/newmembers.html
+++ b/NewMembers/members/templates/newmembers.html
@@ -5,17 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Registro</title>
-    <!--Vinculamos el archivo CSS externo-->
+    <!-- Vinculamos el archivo CSS externo -->
     <link rel="stylesheet" href="{% static 'estilos.css' %}">
+    <!-- Vinculamos el archivo JS externo -->
+    <script src="{% static 'toggleWeaponNumber.js' %}"></script>
 </head>
 <body>
     <video autoplay muted loop id="video-background">
         <source src="{% static 'multimedia/fondologin.mp4' %}" type="video/mp4">
         Tu navegador no soporta videos HTML5
     </video>
-    <h1>CENTRO DE CINERGIA CIBERNÉTICA DE LAS FUERZAS POLICIALES Y DE SEGURIDAD FEDERAL</h1>
+    <h1>CENTRO DE CINERGÍA CIBERNÉTICA DE LAS FUERZAS POLICIALES Y DE SEGURIDAD FEDERAL</h1>
     <h2>Formulario de Registro Nuevos Miembros</h2>
-    <form id="registroform">
+
+    {% if messages %}
+        <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+
+    <form method="post">
+        {% csrf_token %}
         <label for="name">Nombre Completo: </label>
         <input type="text" id="name" name="name" required>
 
@@ -116,7 +128,6 @@
         <button type="submit">Enviar</button>
     </form>
 
- <!--   <script src="{% static 'formulario.js' %}"></script> -->
-
+    <!-- <script src="{% static 'formulario.js' %}"></script> -->
 </body>
 </html>
