se agregan archivos multimedia para los fondos y se corrigen errores en el codigo

--- a/NewMembers/members/templates/newmembers.html
+++ b/NewMembers/members/templates/newmembers.html
@@ -15,7 +15,7 @@
         <source src="{% static 'multimedia/fondologin.mp4' %}" type="video/mp4">
         Tu navegador no soporta videos HTML5
     </video>
-    <h1>CENTRO DE CINERGÍA CIBERNÉTICA DE LAS FUERZAS POLICIALES Y DE SEGURIDAD FEDERAL</h1>
+    <h1>CENTRO DE SINERGÍA CIBERNÉTICA DE LAS FUERZAS POLICIALES Y DE SEGURIDAD FEDERAL</h1>
     <h2>Formulario de Registro Nuevos Miembros</h2>
 
     {% if messages %}
